<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAccent"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/default_fragment"/>

    <Button
        android:id="@+id/btn_open_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/open_template_activity"/>

    <Button
        android:id="@+id/btn_open_protected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/open_login_protected_activity"/>

</LinearLayout>