<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <include
        android:id="@+id/appbar_layout"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_layout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="16dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/between_views"
                        android:text="@string/enter_in_account"
                        android:textAppearance="@style/TextHeader" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/between_views">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_btn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>